<resources>
    <string name="app_name">Pertemuan8</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="show_snackbar">Show Snackbar</string>
    <string name="show_toast">Show Toast</string>
    <string name="show_alert">Show Alert</string>
    <string name="title_activity_constraint">ConstraintActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
